Prevent line wrapping of site header on narrow displays

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -22,11 +22,11 @@ body {
     line-height: var(--line-height);
 }
 
-h1 { font-size: 50px; font-weight: normal; line-height: 54px; margin: 0 0 54px; }
+h1 { font-size: 45px; font-weight: normal; line-height: 54px; margin: 0 0 54px; }
 
 select { width: 100%; }
 
-#header { margin: 0 0 28px; padding-top: 20px; }
+#header { margin: 0 0 28px; padding-top: 20px; white-space: nowrap; }
 
 #logo { display: inline-block; vertical-align: middle; margin: 0px; height: 54px; margin-right: 10px; }
 
